--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "8.57.1",
+    "prisma": "6.13.0",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@prisma/client": "6.13.0",
     "dotenv": "17.2.1",
     "fastify": "^5.5.0",
     "zod": "4.0.17"
