--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,16 @@
 {
-  "extends": ["@rocketseat/eslint-config/node"]
+  "extends": [
+    "@rocketseat/eslint-config/node"
+  ],
+  "rules": {
+    "camelcase": "off",
+    "no-useless-constructor": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+      }
+    ]
+  }
 }
