--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@faker-js/faker": "9.9.0",
     "@rocketseat/eslint-config": "2.2.2",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "^24.2.1",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
@@ -26,10 +28,13 @@
     "prisma": "6.13.0",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.2.4"
   },
   "dependencies": {
     "@prisma/client": "6.13.0",
+    "bcryptjs": "3.0.2",
     "dotenv": "17.2.1",
     "fastify": "^5.5.0",
     "zod": "4.0.17"
