feat: update environment configuration and add JWT support
- Changed PORT from 3333 to 3334 in .env and .env.example
- Added JWT_SECRET to .env
- Updated DATABASE_URL in .env to use port 5435
- Created new types for AdoptionWithPetAndUser
- Added Fastify JWT type definitions
- Updated docker-compose to use port 5435 and added volume for PostgreSQL
- Added @fastify/jwt and supertest dependencies
- Created migration to add isAdopted column to pets table
- Updated Prisma schema to include isAdopted field in Pet model

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,13 @@ services:
   api-solid-pg:
     image: bitnami/postgresql
     ports:
-      - 5433:5432
+      - 5435:5432   # porta livre no host
     environment:
       - POSTGRESQL_USERNAME=docker
       - POSTGRESQL_PASSWORD=docker
       - POSTGRESQL_DATABASE=apisolid
+    volumes:
+      - pgdata_apisolid:/bitnami/postgresql
+
+volumes:
+  pgdata_apisolid:
