--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "^24.2.1",
+    "@types/supertest": "6.0.3",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "8.57.1",
     "prisma": "6.13.0",
+    "supertest": "7.1.4",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.4.5",
@@ -33,6 +35,7 @@
     "vitest": "3.2.4"
   },
   "dependencies": {
+    "@fastify/jwt": "10.0.0",
     "@prisma/client": "6.13.0",
     "bcryptjs": "3.0.2",
     "dotenv": "17.2.1",
